Jamie week 2 updates 3
few tweaks

--- a/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/secondary.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/secondary.html
@@ -10,7 +10,7 @@
 <div th:fragment="header">
 	<nav class="navbar navbar-expand-xxl navbar-dark bg-primary">
 	  <div style="justify-content: center;" class="container-fluid">  	
-    	<a class="navbar-brand" th:href="@{/login/}">FriendZone</a>
+    	<a class="navbar-brand" th:href="@{/}">FriendZone</a>
 	  </div>
 	</nav>
 </div>
