--- a/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
 			<img style="padding-top: 4%; height: 300px; width:auto;" th:src="@{https://th.bing.com/th/id/R.2dc69e1102901c5b1c572d2c2cf530af?rik=KHYkcE1i6od9Aw&riu=http%3a%2f%2fimages.clipartpanda.com%2fblue-flame-clipart-24078-gas-flame-logo-design.png&ehk=7GVinXOZISHLOMtiI%2bpY9WwYGzVhj2hWsv0Z4ECKjMM%3d&risl=&pid=ImgRaw&r=0}"/><br/><br/>
 			<h1 style="color: Black;">Log In</h1>
 			<!--Form to take the user to the home page when submitted and info is validated-->
-			<form class="row g-3" action="#" th:action="@{doLogin}" th:object="${loginModel}" method="post">
+			<form class="row g-3" action="#" th:action="@{home}" th:object="${loginModel}" method="post">
 			
 				<div class="col-md-10">
 					<label for="username" class="col-sm-2 col-form-label">User Name:</label>
