--- a/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
@@ -18,11 +18,11 @@
 			
 				<div class="col-md-10">
 					<label for="username" class="col-sm-2 col-form-label">User Name:</label>
-					<input type="text" th:field="*{username}" id="username">
+					<input type="text" th:field="*{username}" id="username" required>
 				</div>
 				<div class="col-md-10">
 					<label for="password" class="col-sm-2 col-form-label">Password:</label>
-					<input type="password" th:field="*{password}" id="password">
+					<input type="password" th:field="*{password}" id="password" required>
 				</div>
 				
 				<!-- validation errors -->
