--- a/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
@@ -29,7 +29,7 @@
 	    	</div>
 	    	<div class="col">
 	    		<form action="#" th:action="@{/add/}">
-	    			<button type="submit" class="btn"><img src="Create Post Pic.png" alt="Create Post"/></button>
+	    			<button type="submit" class="btn"><img src="/images/Create Post Pic.png" alt="Create Post"/></button>
 	    		</form>
 	    	</div>
 	    	<div class="col">
