--- a/CST339-CLCMilestoneProject/src/main/resources/templates/friends.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/friends.html
@@ -7,6 +7,8 @@
     <title>Site Name</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div layout:fragment="content">
+        <p>This page will display a user's friends list!</p>
+    </div>
 </body>
 </html>
