--- a/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/common.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/common.html
@@ -40,8 +40,8 @@
 		</div>
 	  	<div style="justify-content:end; padding-right: 3%;"class="collapse navbar-collapse">
 			<ul class="navbar-nav ms-auto">
-			<a th:href="@{/own-account/}"><img class="img-thumbnail img-fluid" alt="Your Profile" th:src="@{/images/Avatar.jpg}"/></a>
-		  </ul>
+				<a th:href="@{/own-account/}"><img class="img-thumbnail img-fluid" alt="Your Profile" th:src="@{/images/Avatar.jpg}"/></a>
+		  	</ul>
 		</div>
 	</div>
 	</nav>
@@ -51,7 +51,7 @@
 </div>
 
 <div th:fragment="footer">
-	<h5 style="color:purple; text-align: center; position:fixed; bottom: 0; width: 100%;">Copyright 2022 GCU</h5>
+	<h5 style="color:blue; text-align: center; position:fixed; bottom: 0; width: 100%;">Copyright 2022 GCU</h5>
 </div>
 </body>
 </html>
