--- a/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
@@ -11,34 +11,33 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     	integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
-		<!--Justice gitHub-->
 </head>
 <body>
 <div layout:fragment="content">
 	<div class="container-md" style="padding-top:2%;">
-		<div class="row">
+		<div class="row" style="border-bottom: 2px solid black;">
 			<div class="col">
 				<div class="row">
 			    	<div class="col" style="padding-bottom: 1%;">
-			    		<button type="button" class="btn btn-primary">Home</button>
+			    		<button type="button" class="btn btn-primary" style="width: 95%;">Home</button>
 			    	</div>
 			    	<div class="col">
-			    		<button type="button" class="btn btn-primary">Technology</button>
+			    		<button type="button" class="btn btn-primary" style="width: 95%;">Technology</button>
 			    	</div>
 		    	</div>
 	    	</div>
 	    	<div class="col">
 	    		<form action="#" th:action="@{/add/}">
-	    			<button type="submit" class="btn"><img src="/images/Create Post Pic.png" alt="Create Post"/></button>
+	    			<button type="submit" class="btn"><img src="/images/Create Post Pic.png" alt="Create Post" class="img-fluid"/></button>
 	    		</form>
 	    	</div>
 	    	<div class="col">
 	    		<div class="row">
 			    	<div class="col" style="padding-bottom: 1%;">
-			    		<button type="button" class="btn btn-primary">Art</button>
+			    		<button type="button" class="btn btn-primary" style="width: 95%;">Art</button>
 			    	</div>
 			    	<div class="col">
-			    		<button type="button" class="btn btn-primary">Sports</button>
+			    		<button type="button" class="btn btn-primary" style="width: 95%;">Sports</button>
 			    	</div>
 		    	</div>
 	    	</div>
