--- a/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
@@ -31,7 +31,7 @@
 		  		</div>
 			</form><br/>
 			<!--Link to the registration form-->
-			<a th:href="@{registration}">Register a New Profile</a></br>
+			<a th:href="@{/registration/}">Register a New Profile</a></br>
 		</div>
 	</body>
 </html>
