--- a/CST339-CLCMilestoneProject/src/main/resources/templates/registration.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/registration.html
@@ -9,41 +9,41 @@
 <body>
 
 <div layout:fragment="content">
-	<h1 style="color:blue; padding-bottom:2%">New User</h1>
+	<h1 style="color:blue; padding-bottom:2%" th:text=${title}>...</h1>
 	
 	<!--Form to create a new user, no data validation for inputs currently-->
-	<form class="row g-3" action="#" th:action="@{/login/}" th:object="${userModel}">
+	<form class="row g-3" action="#" th:action="@{submitRegistration}" th:object="${registrationModel}" method="post">
 		<div class="row mb-3">
 			<label class="col-sm-2 col-form-label">Name:</label>
   			<div class="col">
-    			<input type="text" class="form-control" placeholder="First name" aria-label="First name" required>
+    			<input type="text" th:field="*{FirstName}" class="form-control" placeholder="First name" aria-label="First name" required>
   			</div>
   			<div class="col">
-    			<input type="text" class="form-control" placeholder="Last name" aria-label="Last name" required>
+    			<input type="text" th:field="*{LastName}" class="form-control" placeholder="Last name" aria-label="Last name" required>
   			</div>
 		</div>
 		<div class="row mb-3">
     		<label for="inputEmail" class="col-sm-2 col-form-label">Email:</label>
     		<div class="col-sm-10">
-      			<input type="email" class="form-control" id="inputEmail" required>
+      			<input type="email" th:field="*{Email}" class="form-control" id="inputEmail" required>
     		</div>
   		</div>
   		<div class="row mb-3">
     		<label for="inputPhone" class="col-sm-2 col-form-label">Phone:</label>
     		<div class="col-sm-10">
-      			<input type="text" class="form-control" id="inputPhone" required>
+      			<input type="text" th:field="*{Phone}" class="form-control" id="inputPhone" required>
     		</div>
   		</div>
   		<div class="row mb-3">
     		<label for="inputUsername" class="col-sm-2 col-form-label">Username:</label>
     		<div class="col-sm-10">
-      			<input type="text" class="form-control" id="inputUsername" required>
+      			<input type="text" th:field="*{Username}" class="form-control" id="inputUsername" required>
     		</div>
   		</div>
   		<div class="row mb-3">
     		<label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
     		<div class="col-sm-10">
-      			<input type="password" class="form-control" id="inputPassword" required>
+      			<input type="password" th:field="*{Password}" class="form-control" id="inputPassword" required>
     		</div>
   		</div>
   		<div class="row mb-3"> 	    		
