--- a/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
@@ -45,7 +45,7 @@
 				</div>
 			</form><br/>
 			<!--Link to the registration form-->
-			<a th:href="@{registration}" class="btn btn-outline-secondary">Register a New Profile</a><br/>
+			<a th:href="@{/registration/}" class="btn btn-outline-secondary">Register a New Profile</a><br/>
 		</div>
 	</body>
 </html>
