--- a/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
 <body>
 <div layout:fragment="content">
 	<div class="container-md" style="padding-top:2%;">
-		<div class="row" style="border-bottom: 2px solid black;">
+		<div class="row">
 			<div class="col">
 				<div class="row">
 			    	<div class="col" style="padding-bottom: 1%;">
@@ -24,6 +24,7 @@
 			    	<div class="col">
 			    		<button type="button" class="btn btn-primary" style="width: 95%;">Technology</button>
 			    	</div>
+					<img class="img-fluid" src="/images/Underlines.jpg">
 		    	</div>
 	    	</div>
 	    	<div class="col">
@@ -39,6 +40,7 @@
 			    	<div class="col">
 			    		<button type="button" class="btn btn-primary" style="width: 95%;">Sports</button>
 			    	</div>
+					<img class="img-fluid" src="/images/Underlines.jpg">
 		    	</div>
 	    	</div>
 	    </div>
