--- a/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/secondary.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/secondary.html
@@ -8,10 +8,16 @@
 </head>
 <body>
 <div th:fragment="header">
-	<nav class="navbar navbar-expand-xxl navbar-dark bg-primary">
-	  <div style="justify-content: center;" class="container-fluid">  	
-    	<a class="navbar-brand" th:href="@{/}">FriendZone</a>
-	  </div>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+	  <div style="flex-direction:column;" class="navbar-collapse">
+		<div class="container">
+			<a class="navbar-brand" th:href="@{/}"
+				style="font-style:italic; font-size: 1.5vh;">FriendZone</a>
+		</div>
+		<div class="container">
+			<h1 th:text="${pageName}" style="color:white; font-weight: bold;">Page name</h1>
+		</div>
+	</div>
 	</nav>
 </div>
 	
