--- a/CST339-CLCMilestoneProject/src/main/resources/templates/friends.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/friends.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Name</title>
+    <title>FriendZone</title>
 </head>
 <body>
     <div layout:fragment="content">
