--- a/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/defaultTemplate.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/defaultTemplate.html
@@ -20,6 +20,7 @@
 		<style type="text/css">.bs-example { margin: 20px; }</style>
 		
 	</head>
+	<!--Uses common fragments-->
 	<body>
 		<div align="center">
 			<div th:replace="layouts/common :: header">My Header</div>
