--- a/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/loginRegistrationTemplate.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/loginRegistrationTemplate.html
@@ -4,7 +4,7 @@
 	    <meta charset="UTF-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>Cst-339 Spring Boot Activity Application </title>
+	    <title>FriendZone</title>
 	    
 	    <!-- Latest compiled and minified CSS -->
 
@@ -20,6 +20,7 @@
 		<style type="text/css">.bs-example { margin: 20px; }</style>
 		
 	</head>
+	<!--Uses secondary fragments-->
 	<body>
 		<div align="center">
 			<div th:replace="layouts/secondary :: header">My Header</div>
