--- a/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Name</title>
+    <title>FriendZone</title>
 </head>
 	<body>
 	
@@ -16,19 +16,23 @@
 			<!--Form to take the user to the home page when submitted and info is validated-->
 			<form class="row g-3" action="#" th:action="@{doLogin}" th:object="${loginModel}" method="post">
 			
+				<!--Username entry-->
 				<div class="col-md-10">
 					<label for="username" class="col-sm-2 col-form-label">User Name:</label>
 					<input type="text" th:field="*{username}" id="username" required>
 				</div>
+				<!--Password Entry-->
 				<div class="col-md-10">
 					<label for="password" class="col-sm-2 col-form-label">Password:</label>
 					<input type="password" th:field="*{password}" id="password" required>
 				</div>
 				
+				<!--Error Message if invalid-->
 				<div class="col-10-md">
 					<span style="color:red" th:text="${invalidError}"></span>
 				</div>
 				
+				<!--Buttons to Log in or reset password-->
 				<div class="row">
 					<div class="col-sm-5"></div>					
 					<div class="col-sm-1">
