--- a/CST339-CLCMilestoneProject/src/main/resources/templates/registration.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/registration.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Name</title>
+    <title>FriendZone</title>
 </head>
 <body>
 <div layout:fragment="content">	
 	<!--Form to create a new user, no data validation for inputs currently-->
-	<form class="row g-3" action="#" th:action="@{/login/}" th:object="${userModel}" style="width:75%;">
+	<form class="row g-3" action="#" th:action="@{/login/}" th:object="${userModel}" style="width:75%; padding-top: 4%;;">
+		<!--User Entry for Name-->
 		<div class="row mb-3">
 			<label class="col-sm-2 col-form-label">Name:</label>
   			<div class="col">
@@ -19,30 +20,35 @@
     			<input type="text" th:field="*{LastName}" class="form-control" placeholder="Last name" aria-label="Last name" required>
   			</div>
 		</div>
+		<!--User Entry for Email-->
 		<div class="row mb-3">
     		<label for="inputEmail" class="col-sm-2 col-form-label">Email:</label>
     		<div class="col-sm-10">
       			<input type="email" th:field="*{Email}" class="form-control" id="inputEmail" required>
     		</div>
   		</div>
+		<!--User entry for Phone number-->
   		<div class="row mb-3">
     		<label for="inputPhone" class="col-sm-2 col-form-label">Phone:</label>
     		<div class="col-sm-10">
       			<input type="text" th:field="*{Phone}" class="form-control" id="inputPhone" required>
     		</div>
   		</div>
+		<!--User entry for Username-->
   		<div class="row mb-3">
     		<label for="inputUsername" class="col-sm-2 col-form-label">Username:</label>
     		<div class="col-sm-10">
       			<input type="text" th:field="*{Username}" class="form-control" id="inputUsername" required>
     		</div>
   		</div>
+		<!--User Entry for Password-->
   		<div class="row mb-3">
     		<label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
     		<div class="col-sm-10">
       			<input type="password" th:field="*{Password}" class="form-control" id="inputPassword" required>
     		</div>
   		</div>
+		<!--Buttons to let the user submit or cancel and return to login-->
   		<div class="row mb-3"> 	    		
   			<div class="col-sm-12">
   				<button type="submit" class="btn btn-primary">Submit</button>
