--- a/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
@@ -33,9 +33,9 @@
 	    	</div>
 	    	<div class="col">
 				<!--button to create a post-->
-	    		<form action="#" th:action="@{/add/}">
+	    		<form action="#" th:action="@{/posts/}">
 	    			<button type="submit" class="btn"><img src="/images/Create Post Pic.png" alt="Create Post" class="img-fluid"/></button>
-	    		</form>
+	    		</form> 
 	    	</div>
 	    	<div class="col">
 	    		<div class="row">
