--- a/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/common.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/common.html
@@ -28,9 +28,13 @@
 								<li class="nav-item">
 									<a class="nav-link active" aria-current="page" th:href="@{/home/}">Home</a>
 								</li>
+								<!--Navigate to Posts -->
+								<li class="nav-item">
+									<a class="nav-link" th:href="@{/posts/}">Posts</a>
+								</li>
 								<!--Navigates to your own profile-->
 								<li class="nav-item">
-									<a class="nav-link" th:href="@{/own-account/}">Your Profile</a>
+									<a class="nav-link" th:href="@{/own-account/}">Profile</a>
 								</li>
 								<!--Navigates to your friends list page-->
 								<li class="nav-item">
