--- a/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 		<!--Displays the body content of the login form-->
 		<div layout:fragment="content">
 			<!--Pull in image from internet-->
-			<img style="padding-top: 4%; height: 300px; width:auto;" th:src="@{https://th.bing.com/th/id/R.2dc69e1102901c5b1c572d2c2cf530af?rik=KHYkcE1i6od9Aw&riu=http%3a%2f%2fimages.clipartpanda.com%2fblue-flame-clipart-24078-gas-flame-logo-design.png&ehk=7GVinXOZISHLOMtiI%2bpY9WwYGzVhj2hWsv0Z4ECKjMM%3d&risl=&pid=ImgRaw&r=0}"/><br/><br/>
+			<img style="padding-top: 4%; height: 300px; width:auto;" th:src="@{https://ih1.redbubble.net/image.854650454.0142/pp,840x830-pad,1000x1000,f8f8f8.u3.jpg}"/><br/><br/>
 			<h1 style="color: Black;">Log In</h1>
 			<!--Form to take the user to the home page when submitted and info is validated-->
 			<form class="row g-3" action="#" th:action="@{doLogin}" th:object="${loginModel}" method="post">
