--- a/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
@@ -52,6 +52,30 @@
 	    	</div>
 	    </div>
 	</div>
+	<br>
+	
+	<div id="Posts">
+		<table style="width:56%; margin-bottom:3%;">
+			<thead>
+				<tr>
+					<th style="text-align:center">Username</th>
+					<th style="text-align:center">Content</th>
+					<th style="text-align:center">Timestamp</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:if="${posts.empty}">
+					<td style="text-align:center" colspan="4">No Posts Exist.</td>
+				</tr>
+				<tr th:each="post : ${posts}">
+					<td style="text-align:center"><h5 th:text="${post.getUsername()}">?</h5></td>
+					<td style="text-align:center"><h5 th:text="${post.getContent()}">?</h5></td>
+					<td style="text-align:center"><h5 th:text="${post.getTimestamp}">?</h5></td>
+				</tr>
+			</tbody>
+		</table>		
+		<br>
+	</div>
 </div>
 </body>
 </html>
