--- a/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
@@ -10,6 +10,7 @@
     	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     	integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/8a1db32e51.js" crossorigin="anonymous"></script>
     
 </head>
 <body>
@@ -55,19 +56,24 @@
 	<br>
 	
 	<div id="Posts">
-		<div style="width:56%; margin-bottom:3%;">
+		<div style="width:85%; margin-bottom:3%;">
 			<div class="col container">
 				<div class="row" th:if="${posts.empty}">
 					<h4 style="text-align:center" colspan="4">No Posts Exist.</h4>
 				</div>
 				<div class="container" th:each="post : ${posts}" style="margin-bottom: 4%; border: 3px solid black;">
 					<div class="row" style="background-color:blue;">
-						<div class="col"></div>
-						<div class="col">
+						<div class="col-4">
+							<h5 style="color:darkgrey; font-size:2vh;" th:text="${post.getTimestamp()}">Timestamp</h5>
+						</div>
+						<div class="col-4">
 							<h4 style="color:white;" th:text="${post.Username}">Username</h4>
 						</div>
-						<div class="col">
-							<h5 style="color:darkgrey;" th:text="${post.getTimestamp()}">Timestamp</h5>
+						<div class="col-2 justify-content-center">
+							<a href="updatePost.html" class="btn"><i class="fa-regular fa-pen-to-square" style="height:80%; width: auto;"></i></a>
+						</div>
+						<div class="col-2">
+							<btn type="button" class="btn" onClick=""><i class="fa-solid fa-trash" style="height:80%; width: auto;"></i></btn>
 						</div>
 					</div>
 					<div class="row justify-content-center">
