--- a/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/secondary.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/secondary.html
@@ -31,7 +31,7 @@
 
 <!--Copyright footer-->
 <div th:fragment="footer">
-	<h5 style="color:blue; text-align: center; position:fixed; bottom: 0; width: 100%;">Copyright 2022 GCU</h5>
+	<!--<h5 style="color:blue; text-align: center; position:fixed; bottom: 0; width: 100%;">Copyright 2022 GCU</h5>-->
 </div>
 </body>
 </html>
