--- a/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
 				<!--Buttons to Log in or reset password-->
 				<div class="row">
 					<div class="col-sm-5"></div>					
-					<div class="col-sm-1">
+					<div class="col-sm-1" style="width:fit-content;">
 						<button type="submit" class="btn btn-primary">Log In</button>
 					</div>
 					<div class="col-sm-1">
