--- a/CST339-CLCMilestoneProject/src/main/resources/templates/registration.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/registration.html
@@ -7,56 +7,56 @@
     <title>FriendZone</title>
 </head>
 <body>
-<div layout:fragment="content">	
-	<!--Form to create a new user, no data validation for inputs currently-->
-	<form class="row g-3" action="#" th:action="@{submitRegistration}" th:object="${userModel}" method="post" style="width:75%; padding-top: 4%;">
-		<!--User Entry for Name-->
-		<div class="row mb-3">
-			<label class="col-sm-2 col-form-label">Name:</label>
-  			<div class="col">
-    			<input type="text" th:field="*{FirstName}" class="form-control" placeholder="First name" aria-label="First name" required>
-  			</div>
-  			<div class="col">
-    			<input type="text" th:field="*{LastName}" class="form-control" placeholder="Last name" aria-label="Last name" required>
-  			</div>
-		</div>
-		<!--User Entry for Email-->
-		<div class="row mb-3">
-    		<label for="inputEmail" class="col-sm-2 col-form-label">Email:</label>
-    		<div class="col-sm-10">
-      			<input type="email" th:field="*{Email}" class="form-control" id="inputEmail" required>
-    		</div>
-  		</div>
-		<!--User entry for Phone number-->
-  		<div class="row mb-3">
-    		<label for="inputPhone" class="col-sm-2 col-form-label">Phone:</label>
-    		<div class="col-sm-10">
-      			<input type="text" th:field="*{Phone}" class="form-control" id="inputPhone" required>
-    		</div>
-  		</div>
-		<!--User entry for Username-->
-  		<div class="row mb-3">
-    		<label for="inputUsername" class="col-sm-2 col-form-label">Username:</label>
-    		<div class="col-sm-10">
-      			<input type="text" th:field="*{Username}" class="form-control" id="inputUsername" required>
-    		</div>
-  		</div>
-		<!--User Entry for Password-->
-  		<div class="row mb-3">
-    		<label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
-    		<div class="col-sm-10">
-      			<input type="password" th:field="*{Password}" class="form-control" id="inputPassword" required>
-    		</div>
-  		</div>
-		<!--Buttons to let the user submit or cancel and return to login-->
-  		<div class="row mb-3"> 	    		
-  			<div class="col-sm-12">
-  				<button type="submit" class="btn btn-primary">Submit</button>
-				<a th:href="@{/}" class="btn btn-outline-secondary">Cancel</a></br>	
-  			</div>
-  		</div>
-  		<div align="center" th:if="${existingUserError}" style="color:red;">Username Already Exists!</div>
-	</form>	
+	<div layout:fragment="content">
+		<div align="center" th:if="${existingUserError}" style="color:red;">Username Already Exists!</div>
+		<!--Form to create a new user, no data validation for inputs currently-->
+		<form class="row g-3" th:action="@{submitRegistration}" th:object="${userEntity}" method="post" style="width:75%; padding-top: 4%;">
+			<!--User Entry for Name-->
+			<div class="row mb-3">
+				<label class="col-sm-2 col-form-label">Name:</label>
+	  			<div class="col">
+	    			<input type="text" name="firstName" id="firstName" class="form-control" placeholder="First Name" required>
+	  			</div>
+	  			<div class="col">
+	    			<input type="text" name="lastName" id="lastName" class="form-control" placeholder="Last Name" required>
+	  			</div>
+			</div>
+			<!--User Entry for Email-->
+			<div class="row mb-3">
+	    		<label for="email" class="col-sm-2 col-form-label">Email:</label>
+	    		<div class="col-sm-10">
+	      			<input type="email" name="email" class="form-control" id="email" placeholder="Email" required>
+	    		</div>
+	  		</div>
+			<!--User entry for Phone number-->
+	  		<div class="row mb-3">
+	    		<label for="phone" class="col-sm-2 col-form-label">Phone:</label>
+	    		<div class="col-sm-10">
+	      			<input type="text" name="phone" class="form-control" id="phone" placeholder="Phone #" required>
+	    		</div>
+	  		</div>
+			<!--User entry for Username-->
+	  		<div class="row mb-3">
+	    		<label for="username" class="col-sm-2 col-form-label">Username:</label>
+	    		<div class="col-sm-10">
+	      			<input type="text" name="username" class="form-control" id="username" placeholder="User Name" required>
+	    		</div>
+	  		</div>
+			<!--User Entry for Password-->
+	  		<div class="row mb-3">
+	    		<label for="password" class="col-sm-2 col-form-label">Password:</label>
+	    		<div class="col-sm-10">
+	      			<input type="password" name="password" class="form-control" id="password" placeholder="Password" required>
+	    		</div>
+	  		</div>
+			<!--Buttons to let the user submit or cancel and return to login-->
+	  		<div class="row mb-3"> 	    		
+	  			<div class="col-sm-12">
+	  				<button type="submit" class="btn btn-primary">Register</button>
+					<a th:href="@{/}" class="btn btn-outline-secondary">Cancel</a></br>	
+	  			</div>
+	  		</div>
+		</form>	
 	</div>
 </body>
 </html>
