added friending functionality! (Jamie)

--- a/CST339-CLCMilestoneProject/src/main/resources/templates/forgot-password.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/forgot-password.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div layout:fragment="content">
-	
+	<p style="padding: 4%;">When implemented, this page will perform a password reset<br>by sending a link to the user's registered email address.'
 </div>
 </body>
 </html>
