--- a/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/home.html
@@ -11,123 +11,81 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     	integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/8a1db32e51.js" crossorigin="anonymous"></script>
-    
-    <style>
-    	#DeletePostForm {
-			display:flex;
-			flex-wrap:nowrap;
-			border:1px solid black;
-			margin:0% 1% 2% 1%;
-			justify-content:flex-start;
-			width:fit-content;
-			border-radius:8px;
-		}
-    	#DeletePostForm section {
-			width:fit-content;
-			padding:1%;
-		}
-		#DeletePostForm #DeletePostId {
-			width:50%;
-			text-align:center;
-		}
-    </style>
-    
 </head>
 <body>
-<div layout:fragment="content">
-	<!--This is all the code for organizing the Buttons at the top of the home page-->
-	<!--Many of these divs are for positioning/responsive design-->
-	<div class="container-md" style="padding-top:2%;">
-		<div class="row">
-			<div class="col">
-				<div class="row" style="display: none;">
-					<!--Button to sort the home feed by your friends Posts-->
-			    	<div class="col" style="padding-bottom: 1%;">
-			    		<button type="button" class="btn btn-primary" style="width: 95%;">Home</button>
+	<div layout:fragment="content">
+		
+		<!--This is all the code for organizing the Buttons at the top of the home page-->
+		<!--Many of these divs are for positioning/responsive design-->
+		<div class="container-md" style="padding-top:2%;">
+			<div class="row">
+				<div class="col">
+					<div class="row" style="display: none;">
+						<!--Button to sort the home feed by your friends Posts-->
+				    	<div class="col" style="padding-bottom: 1%;">
+				    		<button type="button" class="btn btn-primary" style="width: 95%;">Home</button>
+				    	</div>
+						<!--Button to sort home feed by technology posts-->
+				    	<div class="col">
+				    		<button type="button" class="btn btn-primary" style="width: 95%;">Technology</button>
+				    	</div>
+						<img class="img-fluid" src="/images/Underlines.jpg">
 			    	</div>
-					<!--Button to sort home feed by technology posts-->
-			    	<div class="col">
-			    		<button type="button" class="btn btn-primary" style="width: 95%;">Technology</button>
-			    	</div>
-					<img class="img-fluid" src="/images/Underlines.jpg">
 		    	</div>
-	    	</div>
-	    	<div class="col">
-				<!--button to create a post-->
-	    		<form action="#" th:action="@{/post/}" th:object="${userEntity}">
-	    			<button type="submit" class="btn"><img src="/images/Create Post Pic.png" alt="Create Post" class="img-fluid"/></button>
-	    		</form> 
-	    	</div>
-	    	<div class="col">
-	    		<div class="row" style="display: none;">
-					<!--Button to sort home feed by art posts-->
-			    	<div class="col" style="padding-bottom: 1%;">
-			    		<button type="button" class="btn btn-primary" style="width: 95%;">Art</button>
-			    	</div>
-					<!--Button to sort home feed by sports-->
-			    	<div class="col">
-			    		<button type="button" class="btn btn-primary" style="width: 95%;">Sports</button>
-			    	</div>
-					<img class="img-fluid" src="/images/Underlines.jpg">
+		    	<div class="col">
+					<!--button to create a post-->
+		    		<form action="#" th:action="@{/post/}" th:object="${userEntity}">
+		    			<button type="submit" class="btn"><img src="/images/Create Post Pic.png" alt="Create Post" class="img-fluid"/></button>
+		    		</form> 
 		    	</div>
-	    	</div>
-	    </div>
-	</div>
-	<br>
-	
-	<!--
-	<div id="DeletePostForm" th:if="${!posts.empty}">
-		<form action="#" th:action="@{delete}" th:object="${deleteModel}" method="post">
-				<section>Delete a Post by it's ID: </section>
-				<section><input type="text" th:field="*{Id}" id="DeletePostId" required/></section>			
-				<section><button type="submit" class="btn btn-primary"/>Submit</section>
-		</form>
-	</div>
-	-->
-	
-	<div id="Posts">
-		<div style="width:85%; margin-bottom:3%;">
-			<div class="col container">
-				<div class="row" th:if="${posts.empty}">
-					<h4 style="text-align:center" colspan="4">No Posts Exist.</h4>
-				</div>
-				
-				<!-- Displays each post in formatted way -->
-				<div class="container" th:each="post : ${posts}" style="margin-bottom: 4%; border: 3px solid black; border-radius:8px;">
-					<div class="row" style="background-color:#0d6efd;">
-						<!-- Timestamp -->
-						<div class="col-4">
-							<h5 style="color:silver; font-size:2vh;" th:text="${post.getTimestamp()}">Timestamp</h5>
-						</div>
-						<!-- Username -->
-						<div class="col-4">
-							<h4 style="color:white;" th:text="${post.getUsername()}">Username</h4>
-						</div>
-						<!-- Update Button -->
-						<div class="col-2 justify-content-right">
-							<a th:href="@{post/editPost?postId={postId}(postId=${post.id})}"class="btn"><i class="fa-regular fa-pen-to-square" style="height:80%; width: auto;"></i></a>
-						</div>
-						<!-- Delete Button -->
-						<!--
-						<div class="col-2" th:if="${post.username == username}">
-							<form th:action="@{/post/deletePost}" th:object="${deleteModel}" method="post">
-								<input type="text" th:field="*{deleteModel.id}" value="${post.getId()}"></input>
-								<button type="submit" class="btn"><i class="fa-solid fa-trash" style="height:80%; width:auto;"></i></button>
-							</form>
-						</div>
-						-->
+		    	<div class="col">
+		    		<div class="row" style="display: none;">
+						<!--Button to sort home feed by art posts-->
+				    	<div class="col" style="padding-bottom: 1%;">
+				    		<button type="button" class="btn btn-primary" style="width: 95%;">Art</button>
+				    	</div>
+						<!--Button to sort home feed by sports-->
+				    	<div class="col">
+				    		<button type="button" class="btn btn-primary" style="width: 95%;">Sports</button>
+				    	</div>
+						<img class="img-fluid" src="/images/Underlines.jpg">
+			    	</div>
+		    	</div>
+		    </div>
+		</div>
+		<br>
+		
+		<div id="Posts">
+			<div style="width:85%; margin-bottom:3%;">
+				<div class="col container">
+					<div class="row" th:if="${posts.empty}">
+						<h4 style="text-align:center" colspan="4">No Posts Exist.</h4>
 					</div>
-					<div class="row justify-content-center">
-						<h4 th:text="${post.getCaption()}">Caption</div>
+					
+					<!-- Displays each post in formatted way -->
+					<div class="container" th:each="post : ${posts}" style="margin-bottom: 4%; border: 3px solid black; border-radius:8px;">
+						<div class="row" style="background-color:#0d6efd;">
+							<!-- Timestamp -->
+							<div class="col-4">
+								<h5 style="color:silver; font-size:2vh;" th:text="${post.getTimestamp()}">Timestamp</h5>
+							</div>
+							<!-- Username -->
+							<div class="col-4">
+								<h4 style="color:white;" th:text="${post.getUsername()}">Username</h4>
+							</div>
+							<!-- Update Button -->
+							<div class="col-2 justify-content-right">
+								<a th:href="@{post/editPost?postId={postId}(postId=${post.id})}"class="btn"><i class="fa-regular fa-pen-to-square" style="height:80%; width: auto;"></i></a>
+							</div>
+						</div>
+						<div class="row justify-content-center">
+							<h4 th:text="${post.getCaption()}">Caption</h4>
+						</div>
 					</div>
 				</div>
-				
-				
-			</div>
-		</div>		
+			</div>		
+		</div>
+		
 	</div>
-	
-	
-</div>
 </body>
 </html>
