--- a/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/common.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/common.html
@@ -6,6 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>FriendZone</title>
+	
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    	integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/8a1db32e51.js" crossorigin="anonymous"></script>
+	
 </head>
 
 <body>
@@ -30,11 +37,11 @@
 								</li>
 								<!--Navigates to your own profile-->
 								<li class="nav-item">
-									<a class="nav-link" th:href="@{/own-account/}">Profile</a>
+									<a class="nav-link" th:href="@{/profile/self}">Profile</a>
 								</li>
 								<!--Navigates to your friends list page-->
 								<li class="nav-item">
-									<a class="nav-link" th:href="@{/friends/}">Friends</a>
+									<a class="nav-link" th:href="@{/home/find-friends}">Find Friends</a>
 								</li>
 								<!--Navigates back to log in-->
 								<li class="nav-item">
@@ -49,7 +56,7 @@
 					<div class="col">
 						<div style="flex-direction:column;" class="navbar-collapse">
 							<div class="row">
-								<a class="navbar-brand" th:href="@{/home/}"
+								<a class="navbar-brand" th:href="@{/home}"
 									style="font-style:italic; font-size: 1.5vh;">FriendZone</a>
 							</div>
 							<!--Page name dynamically created in controller-->
@@ -62,8 +69,8 @@
 					<div class="col">
 						<div class="navbar-collapse col">
 							<ul class="navbar-nav ms-auto flex-direction-col">
-							<div style="flex-direction:column">
-									<a th:href="@{/own-account/}"><img class="img-thumbnail img-fluid" alt="Your Profile" th:src="@{/images/Avatar.jpg}" /></a>
+								<div style="flex-direction:column">
+									<a th:href="@{/profile/}"><img class="img-thumbnail img-fluid" style="margin-top:25px;" alt="Your Profile" th:src="@{/images/Avatar.jpg}" /></a>
 									<p th:text="${username}">Default Text</p>
 								</div>
 							</ul>
