bug fix (Jamie)
fixed pages breaking when trying to load a friends object that returns null because a new user has no friends.

--- a/CST339-CLCMilestoneProject/src/main/resources/templates/user-profile.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/user-profile.html
@@ -15,8 +15,10 @@
 </head>
 <body>
     <div layout:fragment="content">
-    	<div class="row" style="padding-top: 4%;">
+    	<div class="row" style="width: 99%; padding: 20px;">
+    	
     		<div class="col-md-3"></div>
+    	
     		<div id="Posts" class="col-md-6">
 				<div class="col container">
 					<h3>Posts</h3>
@@ -54,9 +56,12 @@
 					<h5 style="text-align:center" colspan="4">No Friends Yet</h5>
 				</div>
 				<div class="container" th:each="friend : ${friends}" style="margin-bottom: 4%; padding: 0px 12px;">
-					<div class="row" style="background-color:#0d6efd;">
-						<div class="col-10">
-							<a th:href="@{profile/user/?user={friendUsername}(friendUsername=${friend.username})}" th:text="${friend.username}">Default Friend Name Text</a>
+					<div class="row">
+						<div class="col-10" style="background-color:#0d6efd; margin-bottom: 20px; padding: 10px;">
+							<a style="font-size:2vh; color:white; text-decoration:none;" th:href="@{user/?username={friendUsername}(friendUsername=${friend.username})}" th:text="${friend.getUsername()}">Default Friend Name Text</a>
+						</div>
+						<div class="col-2" style="background-color:#0d6efd; margin-bottom: 20px; padding: 10px;">
+							<a style="color:white;" th:href="@{profile/removeFriend?friendId={friendId}(friendId=${friend.id})}"class="btn"><i class="fa-regular fa-trash-can" style="height:80%; width: auto;"></i></a>
 						</div>
 					</div>
 				</div>
