Posts display update

--- a/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/common.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/layouts/common.html
@@ -33,7 +33,7 @@
 							<ul class="navbar-nav">
 								<!--Navigates to Home-->
 								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" th:href="@{/home/}">Home</a>
+									<a class="nav-link active" aria-current="page" th:href="@{/home}">Home</a>
 								</li>
 								<!--Navigates to your own profile-->
 								<li class="nav-item">
