--- a/CST339-CLCMilestoneProject/src/main/resources/templates/my-profile.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/my-profile.html
@@ -11,6 +11,44 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     	integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="https://kit.fontawesome.com/8a1db32e51.js" crossorigin="anonymous"></script>
+	<style>
+		.bordered {		
+			width:100%;
+		}	
+		.Post {
+			min-height:100px;
+			display:flex;
+			border-left:1px solid #0d6efd;			
+			border-right:1px solid #0d6efd;
+			border-bottom:1px solid #0d6efd;
+		}
+		.PostCaption {
+			padding:15px 20px;
+			border-left:1px solid #0d6efd; 
+			font-size:111%;
+		}
+		.PostDetails {
+			display:flex;
+			flex-direction:column;
+			padding:10px 15px;
+			width:22%;
+		}
+		#PostsTimeline {
+			height:69vh;
+			border:2px solid #0d6efd;
+			overflow-y:auto;
+			display:flex;
+			flex-direction:column;
+		}
+		@media (max-width:700px) {
+			.Post {
+				flex-direction:column;
+			}
+			#PostsTimeline {
+				width:110%;
+			}
+		}
+	</style>
 </head>
 <body>
 	<div layout:fragment="content">
@@ -49,24 +87,22 @@
 					<div class="row" th:if="${posts.empty}">
 						<h4 style="text-align:center" colspan="4">No Posts Exist.</h4>
 					</div>
-					<!-- Displays each post in formatted way -->
-					<div th:each="post : ${posts}" style="margin-bottom: 4%; border: 2px solid black; padding: 0px 12px;">
-						<div class="row" style="background-color:#0d6efd;">
-							<!-- Username -->
-							<div class="col-3">
-								<h4 style="color:white; text-align: left;" th:text="${post.getUsername()}">Username</h4>
-							</div>
-							<!-- Timestamp -->
-							<div class="col-6">
-								<h5 style="color:silver; font-size:1.5vh;" th:text="${post.getTimestamp()}">Timestamp</h5>
-							</div>
-							<!-- Update Button -->
-							<div class="col-3 justify-content-right" style="text-align: right;">
-								<a th:href="@{post/editPost?postId={postId}(postId=${post.id})}"class="btn"><i class="fa-regular fa-pen-to-square" style="height:80%; width: auto;"></i></a>
-							</div>
-						</div>
-						<div class="row justify-content-center">
-							<h4 th:text="${post.getCaption()}">Caption</h4>
+					<div id="PostsTimeline">
+						<div th:each="post : ${posts}">
+							<section class="Post" >
+								<section class="PostDetails">
+									<div class="Timestamp bordered" th:text="${post.getTimestamp()}"></div>	
+									<div class="Username bordered" style="padding-top:5px;"><h3 th:text="${post.getUsername()}"></h3></div>
+								</section>								
+								<section class="PostCaption">							
+									<div class="Caption bordered">
+										<span th:text="${post.getCaption()}"></span>
+										<a th:href="@{post/editPost?postId={postId}(postId=${post.id})}"class="btn">
+											<i class="fa-regular fa-pen-to-square" style="height:80%; width: auto;"></i>
+										</a>
+									</div>											
+								</section>	
+							</section>
 						</div>
 					</div>
 				</div>
